Fix client section overlapping with navbar

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ html {
 /* client section */
 #client-section {
     position: relative;
+    z-index: -1;
 }
 
 #client-section::before {
